// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "Article",
    "mainEntityOfPage": {
      "@type": "WebPage",
      "@id": "https://example.com/article"
    },
    "headline": "Article headline",
    "image": [
      "https://example.com/photos/1x1/photo.jpg","https://example.com/photos/4x3/photo.jpg","https://example.com/photos/16x9/photo.jpg"
     ],
    "datePublished": "2015-02-05T08:00:00+08:00",
    "dateModified": "2015-02-05T09:00:00+08:00",
    "author": {
      "@type": "Person",
      "name": "Jane Blogs"
    },
    "publisher": {
      "@type": "Organization",
      "name": "Gary Meehan",
      "logo": {
        "@type": "ImageObject",
        "url": "https://www.example.com/photos/logo.jpg"
      }
    },
    "description": "This is a mighty good description of this article."
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`BlogJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "Blog",
    "mainEntityOfPage": {
      "@type": "WebPage",
      "@id": "https://example.com/blog"
    },
    "headline": "Blog headline",
    "image": [
      "https://example.com/photos/1x1/photo.jpg","https://example.com/photos/4x3/photo.jpg","https://example.com/photos/16x9/photo.jpg"
     ],
    "datePublished": "2015-02-05T08:00:00+08:00",
    "dateModified": "2015-02-05T09:00:00+08:00",
    "author": {
      "@type": "Person",
      "name": "Jane Blogs"
    },
    "description": "This is a mighty good description of this blog."
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`BreadcrumbJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": [
      {
        "@type": "ListItem",
        "position": 1,
        "item": {
          "@id": "https://example.com/books",
          "name": "Books"
        }
      },{
        "@type": "ListItem",
        "position": 2,
        "item": {
          "@id": "https://example.com/books/authors",
          "name": "Authors"
        }
      },{
        "@type": "ListItem",
        "position": 3,
        "item": {
          "@id": "https://example.com/books/authors/annleckie",
          "name": "Ann Leckie"
        }
      },{
        "@type": "ListItem",
        "position": 4,
        "item": {
          "@id": "https://example.com/books/authors/annleckie/ancillaryjustice",
          "name": "Ancillary Justice"
        }
      }
     ]
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`CorporateContactJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "https://schema.org",
    "@type": "Organization",
    "url": "http://www.your-company-site.com",
    "logo": "http://www.example.com/logo.png",
    "contactPoint": [{
    "@type": "ContactPoint",
    "telephone": "+1-401-555-1212",
    "contactType": "customer service",
    "areaServed": "US",
    "availableLanguage": ["English","Spanish","French"]
    },{
    "@type": "ContactPoint",
    "telephone": "+1-877-746-0909",
    "contactType": "customer service",
    "availableLanguage": "English",
    "contactOption": "TollFree"
    },{
    "@type": "ContactPoint",
    "telephone": "+1-877-453-1304",
    "contactType": "technical support",
    "areaServed": ["US","CA"],
    "availableLanguage": ["English","French"],
    "contactOption": "TollFree"
    }]
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`CourseJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "Course",
    "name": "Course Name",
    "description": "Course description goes right here",
    "provider": {
      "@type": "Organization",
      "name": "Course Provider",
      "sameAs": "https//www.example.com/provider"
    }
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`LocalBusinessJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "Store",
    "@id": "http://davesdeptstore.example.com",
    "description": "Dave's latest department store in San Jose, now open",
    "url": "http://www.example.com/store-locator/sl/San-Jose-Westgate-Store/1427",
    "telephone": "+14088717984",
    
  "address": {
    "@type": "PostalAddress",
    "streetAddress": "1600 Saratoga Ave",
    "addressLocality": "San Jose",
    "addressRegion": "CA",
    "postalCode": "95129",
    "addressCountry": "US"
  },

    
  "geo": {
    "@type": "GeoCoordinates",
    "latitude": "37.293058",
    "longitude": "-121.988331"
  },

    
    
    "image":["https://example.com/photos/1x1/photo.jpg","https://example.com/photos/4x3/photo.jpg","https://example.com/photos/16x9/photo.jpg"],
    "name": "Dave's Department Store"
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`LogoJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "Organization",
    "url": "http://www.your-site.com",
    "logo": "http://www.your-site.com/images/logo.jpg"
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`NewsArticleJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "NewsArticle",
    "mainEntityOfPage": {
      "@type": "WebPage",
      "@id": "https://example.com/newsarticle"
    },
    "headline": "News Article headline",
    "image": [
      "https://example.com/photos/1x1/photo.jpg","https://example.com/photos/4x3/photo.jpg","https://example.com/photos/16x9/photo.jpg"
     ],
    "articleSection":"politics",
    "keywords": "prayuth, taksin, thai",
    "datePublished": "2015-02-05T08:00:00+08:00",
    "dateCreated": "2015-02-05T08:00:00+08:00",
    "dateModified": "2015-02-05T09:00:00+08:00",
    "author": {
      "@type": "Person",
      "name": "Jane Blogs"
    },
    "publisher": {
      "@type": "Organization",
      "name": "Gary Meehan",
      "logo": {
        "@type": "ImageObject",
        "url": "https://www.example.com/photos/logo.jpg"
      }
    },
    "description": "This is a mighty good description of this news article.",
    "articleBody": "This is article body of news article"
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`ProductJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org/",
    "@type": "Product",
    "image":["https://example.com/photos/1x1/photo.jpg","https://example.com/photos/4x3/photo.jpg","https://example.com/photos/16x9/photo.jpg"],
    "description": "Sleeker than ACME's Classic Anvil, the Executive Anvil is perfect for the business traveler looking for something to drop from a height.",
    "mpn": "925872",
    
    
    
    
    
  "brand": {
      "@type": "Thing",
      "name": "ACME"
    },

    
"review": [
  {
      "@type": "Review",
      "datePublished": "2017-01-06T03:37:40Z",
      "reviewBody": "This is my favorite product yet! Thanks Nate for the example products and reviews.",
      "name": "So awesome!!!",
      "reviewRating": {
          "@type": "Rating",
          "bestRating": "5",
          "worstRating": "1",
          "ratingValue": "5"
        },
      "author": "Jim"
  }],
    
  "aggregateRating": {
      "@type": "AggregateRating",
      "ratingValue": "4.4",
      "reviewCount": "89"
    },

    
  "offers": {
    "@type": "Offer",
    "priceCurrency": "USD",
    "priceValidUntil": "2020-11-05",
    "itemCondition": "http://schema.org/UsedCondition",
    "availability": "http://schema.org/InStock",
    "url": "https://www.example.com/executive-anvil",
    
      "seller": {
      "@type": "Organization",
      "name": "Executive Objects"
    },
    
    "price": "119.99"
  },

    "name": "Executive Anvil"
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`SocialProfileJsonLd 1`] = `
<html>
  <head>
    <script
      data-rh="true"
      type="application/ld+json"
    >
      {
    "@context": "http://schema.org",
    "@type": "Person",
    "name": "your name",
    "url": "http://www.your-site.com",
    "sameAs": [
      "http://www.facebook.com/your-profile","http://instagram.com/yourProfile","http://www.linkedin.com/in/yourprofile","http://plus.google.com/your_profile"
     ]
  }
    </script>
  </head>
  <body>
    <div />
  </body>
</html>
`;
